--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,55 +56,6 @@ th, td{
 }
 
 
-#H_button {
-  letter-spacing:-4px; /* やや重要 */
-  width:100%;
-  padding:20pt;
-  text-align:center; /* 重要 */
-}
-
-.H_button_1 {
-  width:90%;
-  background: red;
-  height:20%; /* 画像などの場合はauto */
-  display:inline-block; /* 重要 */
-  letter-spacing:normal; /* やや重要 */
-}
-
-.H_button_2 {
-  width:90%;
-  height:20%; /* 画像などの場合はauto */
-  display:inline-block; /* 重要 */
-  letter-spacing:normal; /* やや重要 */
-}
-
-/* #Home{
-  background: #f7f7f7 url(/image/coffee.jpg) center top no-repeat;
-} */
-
-
-/* .hero {
-  height: 100vh; 
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  position: relative;
-  background-image: url("/image/coffee1.jpg");
-}
-
-.hero::before {
-  background: inherit;
-  content: '';
-  filter: blur(15px);
-  position: absolute;
-  top: -5px;
-  right: -5px;
-  bottom: -5px;
-  left: -5px;
-} */
-
-
 .background{
   z-index:0;
   overflow: hidden;
@@ -135,6 +86,21 @@ th, td{
   width: 100%;
 }
 
-.H_buttons{
-  text-align: center;
+
+.image {
+  border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+  width:  360px;       /* ※縦横を同値に */
+  height: 360px;       /* ※縦横を同値に */
 }
+
+
+.container {
+      width: 1000px;
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .container>img {
+      width: 200px;
+      margin: 15px;
+    }
