--- a/www/css/style.css
+++ b/www/css/style.css
@@ -95,7 +95,7 @@ th, td{
 
 
 .container {
-      width: 1000px;
+      width: 100%;
       display: block;
       margin: 0 auto;
       text-align: center;
