✨[CA]個数編集・座席番号選択・DBへのプッシュ
[工事中]商品編集

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,23 +14,10 @@
   opacity:1; 
 } */
 
-/* .pList{
-  height: 100%;
-  overflow-y:scroll;
+.money {
+  font-size: 200%;
+  text-align: right;
 }
-
-html {
-    height: 100%;
-}
-body {
-    height: 100%;
-    margin: 0;
-}
-ons-page {
-    height: 100%;
-    margin: 0;
-} */
-
 
 table{
   border-collapse: collapse;
