--- a/www/css/Casher.css
+++ b/www/css/Casher.css
@@ -24,7 +24,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+#CA_goodsList {
+  height: 100%;
+  overflow-y: scroll;
+  background: white;
 }
 .CA_button {
   width: 30%;
@@ -36,7 +41,18 @@
   white-space: pre;
   text-align: center;
 }
-.CA_decideButton {
+#CA_cart {
+  height: 80%;
+  overflow-y: scroll;
+}
+#CA_totalPrice {
+  width: 100%; 
+  height: 10%;
+}
+#CA_main #CA_decideButton {
+  width: 100%;
+  height: 10%;
+  font-size: 2.0em;
   text-align: center;
   font-weight: bold;
   background: red;
