--- a/www/css/OrderDisplay.css
+++ b/www/css/OrderDisplay.css
@@ -1,12 +1,15 @@
 /* This is a CSS file */
 .OD_table1{
   width:7%;
+  /* border-right: 1px solid #c5956b; */
 }
 .OD_table2{
   width:59%;
+  /* border-right: 1px solid #c5956b; */
 }
 .OD_table3{
   width:10%;
+  /* border-right: 1px solid #c5956b96; */
 }
 .OD_table4{
   width:7%;
@@ -18,6 +21,8 @@
 }
 .OD_table6{
   width:7%;
+  border-left: 1px solid rgba(255, 255, 255, 0);
+  /* border-right: 1px solid #c5956b; */
 }
 
 
@@ -33,3 +38,45 @@
     font-size: 20px;
 }
 
+
+.stateColor_0{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #F9F9F9;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
+
+.stateColor_1{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #ffe6e6;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
+
+.stateColor_2{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #fff7cc;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
+
+.stateColor_3{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #dcffcc;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
+
+.stateColor_4{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #ccf7ff;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
+
+.stateColor_5{
+  border-right: 1px solid rgba(255, 255, 255, 0);
+  background-color: #cce6ff;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%,color-stop(.25, #F9F9F9), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, #F9F9F9),color-stop(.75, #F9F9F9), color-stop(.75, transparent),to(transparent));
+  -webkit-background-size: 14px 14px;
+}
