--- a/www/lib/onsenui/css/onsen-css-components.css
+++ b/www/lib/onsenui/css/onsen-css-components.css
@@ -129,7 +129,7 @@ h4, h5, h6 {
   box-sizing: border-box;
 }
 .page__background {
-  background-color: #efeff4;
+  background-color: #fefeff;
   position: absolute;
   top: 0;
   left: 0;
@@ -192,7 +192,7 @@ h4, h5, h6 {
   font-size: 20px;
 }
 .page--material__background {
-  background-color: #eceff1;
+  background-color: #ffffff;
 }
 :root { /* background color active */
 }
