✨[sidebar] レジ側と厨房側でサイドバーが変わる
CA_main でボタンはみだしがなくなった
OL_dialog で金額表示が変わった

--- a/www/css/Casher.css
+++ b/www/css/Casher.css
@@ -38,6 +38,9 @@
   text-align: center;
 }
 #CA_main .CA_buttonText {
+  max-width: 0px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 1.5em;
   font-weight: bold;
   white-space: pre;
